--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <footer class="top-footer">
         <div class="footer-bar">
           <div class="flex">
-            <h1 class="header-logo">estra inc.</h1>
+            <h1 class="footer-logo">estra inc.</h1>
             <nav class="header-nav">
               <ul>
                 <li><a href="#">home</a></li>
